#[package]
#name = "volo-gen"
#version = "0.1.0"
#edition.workspace = true
#
## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
#[dependencies]
#volo.workspace = true
#volo-thrift.workspace = true
#pilota.workspace = true
#
#anyhow.workspace = true
#async-trait.workspace = true
#tokio = { workspace = true, features = ["full"] }
#
#[build-dependencies]
#volo-build.workspace = true

[package]
name = "volo-gen"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
pilota = "*"
volo = "*"        # we recommend to use the latest framework version for new features and bug fixes
volo-thrift = "*" # we recommend to use the latest framework version for new features and bug fixes

serde = { version = "1", features = ["derive", "rc"] }
syn = "2.0.23"
quote = "1.0.29"
faststr = "0.2.3"
itertools = "0.11.0"
tracing = "0.1.37"
volo-build = "*"

[build-dependencies]
syn = "2.0.23"
quote = "1.0.29"
pilota-build = "0.8.2"
faststr = "0.2.3"
itertools = "0.11.0"
tracing = "0.1.37"
volo-build = "*"

